tests/baselines/reference/genericAndNonGenericInheritedSignature1.errors.txt
tests/cases/compiler/genericAndNonGenericInheritedSignature1.ts(7,11): error TS2320: Interface 'Hello' cannot simultaneously extend types 'Foo' and 'Bar'.
  Named property 'f' of types 'Foo' and 'Bar' are not identical.


==== tests/cases/compiler/genericAndNonGenericInheritedSignature1.ts (1 errors) ====
    interface Foo {
        f(x: any): any;
    }
    interface Bar {
        f<T>(x: T): T;
    }
    interface Hello extends Foo, Bar {
              ~~~~~
!!! error TS2320: Interface 'Hello' cannot simultaneously extend types 'Foo' and 'Bar'.
!!! error TS2320:   Named property 'f' of types 'Foo' and 'Bar' are not identical.
    }
    